--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,92 @@
 <html lang="en">
 <head>
   <title>HashiChat</title>
+
+  <style type="text/css" media="screen">
+    html {
+      overflow: hidden;
+      box-sizing: border-box;
+      height: 100%;
+      width: 100%;
+    }
+
+    *, *:before, *:after {
+      box-sizing: inherit;
+    }
+
+    body {
+      font-family: Helvetica;
+      overflow: hidden;
+      padding: 30px;
+      padding-bottom: 100px;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    #log {
+      background: white;
+      margin: 0;
+      height: 100%;
+      margin-bottom: 20px;
+      overflow: auto;
+    }
+
+    .msg {
+      padding: 5px 0;
+      margin-bottom: 3px;
+      clear: both;
+    }
+
+    .gravatar {
+      float: left;
+      margin-right: 10px;
+      border: 1px solid #999;
+      border-radius: 4px;
+      padding: 2px;
+    }
+
+    .announce {
+      font-size: 12px;
+      font-style: italic;
+      text-align: center;
+      padding: 14px 0;
+    }
+
+    .username {
+      color: #333;
+      display: inline-block;
+      font-weight: bold;
+      margin-top: 3px;
+      margin-right: 4px;
+      margin-bottom: 5px;
+    }
+
+    .timestamp {
+      color: #aaa;
+      font-size: 12px;
+      font-weight: normal;
+    }
+
+    .message {
+      display: block;
+    }
+
+    #text {
+      border: 2px solid #ddd;
+      border-radius: 4px;
+      color: #333;
+      outline: none;
+      font-size: 12pt;
+      padding: 13px 18px;
+      width: 100%;
+    }
+
+    #text:focus {
+      border: 2px solid #aaa;
+    }
+  </style>
+
   <script type="text/javascript">
     window.onload = function () {
         var conn;
@@ -87,6 +173,12 @@
                 console.log("Unknown type: " + obj.type)
               }
             };
+
+            // Send a keep-alive down the websocket every 10s to ensure the
+            // connection stays active.
+            setInterval(function() {
+              conn.send("")
+            }, 10000);
         } else {
           var item = document.createElement("div");
           item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
@@ -94,87 +186,6 @@
         }
     };
   </script>
-
-  <style type="text/css">
-    html {
-      overflow: hidden;
-      box-sizing: border-box;
-      height: 100%;
-      width: 100%;
-    }
-
-    *, *:before, *:after {
-      box-sizing: inherit;
-    }
-
-    body {
-      font-family: Helvetica;
-      overflow: hidden;
-      padding: 30px;
-      padding-bottom: 100px;
-      margin: 0;
-      width: 100%;
-      height: 100%;
-    }
-
-    #log {
-      background: white;
-      margin: 0;
-      height: 100%;
-      margin-bottom: 20px;
-      overflow: auto;
-    }
-
-    .msg {
-      padding: 5px 0;
-      margin-bottom: 3px;
-      clear: both;
-    }
-
-    .gravatar {
-      float: left;
-      margin-right: 10px;
-      border: 1px solid #999;
-      border-radius: 4px;
-      padding: 2px;
-    }
-
-    .announce {
-      font-size: 12px;
-      font-style: italic;
-      text-align: center;
-      padding: 14px 0;
-    }
-
-    .username {
-      color: #333;
-      display: inline-block;
-      font-weight: bold;
-      margin-top: 3px;
-      margin-right: 4px;
-      margin-bottom: 5px;
-    }
-
-    .timestamp {
-      color: #aaa;
-      font-size: 12px;
-      font-weight: normal;
-    }
-
-    .message {
-      display: block;
-    }
-
-    #text {
-      border: 2px solid #aaa;
-      border-radius: 4px;
-      color: #333;
-      outline: none;
-      font-size: 12pt;
-      padding: 13px 18px;
-      width: 100%;
-    }
-  </style>
 </head>
 
 <body>
