--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,24 @@
       height: 100%;
     }
 
+    .overlay {
+      background: #000;
+      color: #fff;
+      opacity: 0.7;
+      position: absolute;
+
+      height: 100%;
+      line-height: 100%;
+      text-align: center;
+      font-size: 50px;
+      padding-top: 40%;
+
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
+
     #log {
       background: white;
       margin: 0;
@@ -141,6 +159,13 @@
           appendLog(msg);
         }
 
+        function displayOverlay(msg) {
+          var overlay = document.createElement("div");
+          overlay.className += "overlay";
+          overlay.innerText = msg
+          document.body.appendChild(overlay);
+        }
+
         document.getElementById("form").onsubmit = function () {
           if (!conn) {
             return false;
@@ -155,11 +180,11 @@
 
         if (window["WebSocket"]) {
             conn = new WebSocket("ws://"+location.host+"/ws");
+
             conn.onclose = function (evt) {
-              var item = document.createElement("div");
-              item.innerHTML = "<b>Connection closed.</b>";
-              appendLog(item);
+              displayOverlay("Connection closed");
             };
+
             conn.onmessage = function (evt) {
               var content = evt.data;
 
@@ -180,9 +205,7 @@
               conn.send("")
             }, 10000);
         } else {
-          var item = document.createElement("div");
-          item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-          appendLog(item);
+          displayOverlay("Your browser does not support WebSockets");
         }
     };
   </script>
